--- a/versions.yaml
+++ b/versions.yaml
@@ -231,6 +231,7 @@ module-sets:
       - github.com/open-telemetry/opentelemetry-collector-contrib/testbed
       - github.com/open-telemetry/opentelemetry-collector-contrib/testbed/mockdatareceivers/mockawsxrayreceiver
       - github.com/open-telemetry/opentelemetry-collector-contrib/testbed/mockdatasenders/mockdatadogagentexporter
+      - github.rbx.com/Roblox/tracing-proxy/rblxprocessor
 
 
 excluded-modules:
